2006/8/22 -- released version 20060822_trunk

2006/8/21 -- released version 20060821_trunk

2006/8/20 -- released version 20060820_trunk

2006/8/19 -- released version 20060819_trunk

2006/8/18 -- released version 20060818_trunk

2006/8/17 -- released version 20060817_trunk

2006/8/16 -- released version 20060816_trunk

* Allow several Mailservers to be specified in Mailhost
* Reduce timeout for Net::SMTP to 5 seconds.
2006/8/15 -- released version 20060815_trunk

2006/8/14 -- released version 20060814_trunk

2006/8/13 -- released version 20060813_trunk

2006/8/12 -- released version 20060812_trunk

2006/8/11 -- released version 20060811_trunk

2006/8/10 -- released version 20060810_trunk

2006/8/9 -- released version 20060809_trunk

2006/8/8 -- released version 20060808_trunk

2006/8/7 -- released version 20060807_trunk

2006/8/6 -- released version 20060806_trunk

2006/8/5 -- released version 20060805_trunk

2006/8/4 -- released version 20060804_trunk

2006/8/3 -- released version 20060803_trunk

2006/8/2 -- released version 20060802_trunk

2006/8/1 -- released version 20060801_trunk

2006/7/31 -- released version 20060731_trunk

2006/7/30 -- released version 20060730_trunk

2006/7/29 -- released version 20060729_trunk

2006/7/28 -- released version 20060728_trunk

2006/7/27 -- released version 20060727_trunk

2006/7/26 -- released version 20060726_trunk

2006/7/25 -- released version 20060725_trunk

2006/7/24 -- released version 20060724_trunk

2006/7/23 -- released version 20060723_trunk

2006/7/22 -- released version 20060722_trunk

2006/7/21 -- released version 20060721_trunk

2006/7/20 -- released version 20060720_trunk

2006/7/19 -- released version 20060719_trunk

2006/7/18 -- released version 20060718_trunk

2006/7/17 -- released version 20060717_trunk

2006/7/16 -- released version 20060716_trunk

2006/7/15 -- released version 20060715_trunk

* added matchers CheckLatency and CheckLoss -- tobi, from Dylan Vanderhoof DylanV semaphore.com